Make numerous improvements and bug fixes: - Make the form for adding a new activity manually show up in a modal popup. - Make the category titles expand/collapse upon click - Add cancel buttons to cancel out of the form for creating a new activity or updating an existing one. - Add the jQuery UI date plugin for showing dates and format it in UK format but save in MySQL format. - Improve the overall experience by adding JavaScript notifications and redirect to base URLs after certain operations. - Fix numerous pre-existing typos in the HTML.

--- a/civicpd.css
+++ b/civicpd.css
@@ -48,12 +48,12 @@ margin-top: 400px;
    color:#EB1040;
 }
 
-.activity-item-manual {
-margin: 0 10% 0 10%;
-float: left;
-width: 30%;
-height: 200px;
+.inline {
+    display: inline !important;
+    float: none !important;
 }
+
+.activity-item-manual {}
 
 .activity-item-import {
 margin: 0 10% 0 10%;
@@ -65,8 +65,35 @@ height: 200px;
 .add-new-category,
 .activity-item-import-pdf,
 .activity-item,
-.activity-list {
-    display:none;
+.activity-list {}
+
+.category-title {
+    cursor: pointer;
+    position: relative;
+}
+
+.category-title .button {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.toggle-activity-list {
+    background: url(https://ies-uk.ccuptest.co.uk/sites/all/themes/ies_theme/images/icons/iconsCollapseXSmallSprite.gif) no-repeat center -11px;
+    text-indent: -9999em;
+    display: block;
+    float: left;
+    width: 19px;
+    height: 19px;
+    margin-right: 5px;
+}
+
+.toggle-activity-list.contracted {
+    background-position: center 5px;
+}
+
+.hidden {
+    display: none;
 }
 
 .clear{
