--- a/civicpd.css
+++ b/civicpd.css
@@ -48,6 +48,12 @@ margin-top: 400px;
    color:#EB1040;
 }
 
+input.error,
+textarea.error {
+    border-color: #EB1040 !important;
+    border-width: 1px;
+}
+
 .inline {
     display: inline !important;
     float: none !important;
