CGP-17 Bugs/Issues with CPD extension - Upload PDF: - Improve form validation - Add validation for upload file extension (JS and PHP) - Add validation to the full CPD upload as well - Fix a bug where the check whether full CPD upload is allowed or not was not checking it against the current user

--- a/civicpd.css
+++ b/civicpd.css
@@ -52,6 +52,7 @@ input.error,
 textarea.error {
     border-color: #EB1040 !important;
     border-width: 1px;
+    border-style: solid;
 }
 
 .inline {
