Fixed rendering for notes section on CPD reports
The notes section will now wrap correctly and will include
new lines / spacing etc

--- a/civicpd.css
+++ b/civicpd.css
@@ -911,3 +911,7 @@ SPAN.searchword { background-color:yellow; }
 
 }
 
+/* Make the notes section on the report render correctly */
+.notes-render {
+    white-space: pre-wrap;
+}
