--- a/civicpd-print.css
+++ b/civicpd-print.css
@@ -5,7 +5,7 @@
 }
 
 body {
-
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 #page {
@@ -61,8 +61,6 @@ body {
 .CPDactivityTable th {
     color: black;
 }
-
-
 
 .CPDactivityTable table,
 .CPDactivityTable th,
