IES-134: sync civiCPD bitbucket repo with civiCPD on github

--- a/civicpd-print.css
+++ b/civicpd-print.css
@@ -110,3 +110,9 @@ body {
     float: right;
     margin-right: 20px;
 }
+
+.CPDnewActivityItem,
+.category-title > a,
+#crm-container p {
+    display: none;
+}
